<resources>
    <string name="app_name">Shoppy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Developer</string>
    <string name="tvsilahkan">Silahkan Login Untuk Memakai Aplikasi</string>
    <string name="tvcreataccount">Create a New Account !</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_signin">Sign in</string>
    <string name="img_logo">Logo</string>
</resources>