<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logotext"
            android:contentDescription="@string/img_logo" />

        <TextView
            android:id="@+id/tvsilahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:text="@string/tvsilahkan"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvsilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/hint_username"
            android:autofillHints="@string/hint_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="@string/hint_password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign_in"
            android:text="@string/btn_signin"/>

        <TextView
            android:id="@+id/tvcreataccount"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:textAlignment="center"
            android:text="@string/tvcreataccount"/>

    </RelativeLayout>

</LinearLayout>